[gd_scene load_steps=5 format=3 uid="uid://de3finheo2q5k"]

[ext_resource type="Script" path="res://game/monster_spawner/Mob.gd" id="1_pvs4u"]
[ext_resource type="Texture2D" uid="uid://bsfxat76ewwge" path="res://assets/sprites/enemies/Grabber.png" id="2_8nv5s"]
[ext_resource type="PackedScene" uid="uid://38p451gvh1tw" path="res://game/monster_spawner/bullet.tscn" id="2_xqmx1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uld0d"]
size = Vector2(130, 126)

[node name="Mob" type="RigidBody2D" groups=["Monsters"]]
collision_layer = 2
gravity_scale = 0.0
lock_rotation = true
script = ExtResource("1_pvs4u")
projectile = ExtResource("2_xqmx1")
speed = 300
scroll_speed = 0
movement_type = 2

[node name="Sprite" type="Sprite2D" parent="."]
z_index = 10
texture = ExtResource("2_8nv5s")
region_enabled = true
region_rect = Rect2(0, 0, 64, 64)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 0)
scale = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_uld0d")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(6.6, 6.5)

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
